--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,15 @@ install:
   - echo Installed Pythons
   - dir c:\Python*
 
+  - choco install python.pypy > pypy-inst.log 2>&1 || (type pypy-inst.log & exit /b 1)
+  - set PATH=C:\tools\pypy\pypy;%PATH% # so tox can find pypy
+  - echo PyPy installed
+  - pypy --version
+
   - C:\Python35\python -m pip install devpi
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:  
   - C:\Python35\python -m devpi use https://devpi.net/nicoddemus/dev
-  - C:\Python35\python -m devpi test pytest==2.9.0
+  - C:\Python35\python -m devpi test pytest==2.9.1
