--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
 install: "pip install -U devpi"
 
 script: 
-    - devpi use https://devpi.net/nicoddemus/dev
-    - devpi test pytest==2.9.1
+    - devpi use https://devpi.net/ronny/dev
+    - devpi test pytest==2.9.2
