--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,5 +12,5 @@ install:
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:  
-  - C:\Python35\python -m devpi use https://devpi.net/nicoddemus/dev
-  - C:\Python35\python -m devpi test pytest==2.9.1
+  - C:\Python35\python -m devpi use https://devpi.net/ronny/dev
+  - C:\Python35\python -m devpi test pytest==2.9.2
