--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: "pip install -U devpi"
 
 script: 
     - devpi use https://devpi.net/nicoddemus/dev
-    - devpi test pluggy==0.4.0
+    - devpi test pytest==3.0.3
