--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,6 @@ install:
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:  
-  - C:\Python35\python -m devpi use https://devpi.net/nicoddemus/dev
-  - C:\Python35\python -m devpi test pytest==3.0.5
+  - C:\Python35\python -m devpi use https://devpi.net/ronny/dev
+  - C:\Python35\python -m devpi test pytest==3.0.6
 
