--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,6 @@ install:
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:  
-  - C:\Python35\python -m devpi use https://devpi.net/ronny/dev
-  - C:\Python35\python -m devpi test pytest==3.0.6
+  - C:\Python35\python -m devpi use https://devpi.net/obestwalter/dev
+  - C:\Python35\python -m devpi test tox==2.6.0.dev1
 
