--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,11 @@ install:
   - echo PyPy installed
   - pypy --version
 
-  - C:\Python35\python -m pip install devpi
+  - C:\Python36\python -m pip install devpi
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:  
-  - C:\Python35\python -m devpi use https://devpi.net/obestwalter/dev
-  - C:\Python35\python -m devpi test tox==2.6.0.dev1
+  - C:\Python36\python -m devpi use https://devpi.net/nicoddemus/dev
+  - C:\Python36\python -m devpi test py==1.4.33
 
