--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: "pip install -U devpi"
 
 script: 
     - devpi use https://devpi.net/nicoddemus/dev
-    - devpi test pytest==3.0.7
+    - devpi test py==1.4.33 --tox-args "-- --color=yes"
