--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ install:
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
-test_script:  
+test_script:
   - C:\Python36\python -m devpi use https://devpi.net/nicoddemus/dev
-  - C:\Python36\python -m devpi test py==1.4.33 --tox-args "-- --color=yes"
+  - C:\Python36\python -m devpi test pytest==3.1.0 --tox-args "-- --color=yes"
 
