--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: "pip install -U devpi"
 
 script:
     - devpi use https://devpi.net/nicoddemus/dev
-    - devpi test pytest==3.1.0 --tox-args "-- --color=yes"
+    - devpi test pytest==3.1.0 --tox-args "-- testing --color=yes"
