--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 language: python
 python:
     - '3.5'
+
+env:
+  matrix:
+    - TOXENV=py27
+    - TOXENV=py35
 # command to install dependencies
 install: "pip install -U devpi"
 
